syntax = "proto3";
package node;

import "NodeData.proto";

message Token {
    enum TokenType {
        DATA = 0;
        EXIT = 1;
        SEX_AND_DRUGS = 2;                                        
    }

    TokenType type = 1;
    string randomShit = 2;
}

message JoinResponse {
    bool joinApproved = 1;
    NodeData nextNode = 2;
}

message ExitingResponse {
    NodeData nextNode = 1;
}

service NodeService {
    rpc joinAfter (NodeData) returns (JoinResponse);
    rpc passNext (stream Token) returns (ExitingResponse);
}