syntax = "proto3";
package node;

message NodeData{
    string ip = 1;
    int32 port = 2;
    int32 id = 3;
}